<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:text="@string/help_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:text="@string/help_info2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:text="@string/help_info3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:text="@string/help_info4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:text="@string/help_info5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:text="@string/help_info6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:text="@string/help_info7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Button
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/done"
        android:layout_gravity="center"/>


    </LinearLayout>
</ScrollView>